--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
         <!--Bootstrap CSS-->
         <link rel="stylesheet" href="C:/Users/ISEM/Documents/FreeCodeCamp_Projects/bootstrap-4.1.0-dist/css/bootstrap.css">
-        <!--link rel="stylesheet" type="text/css" media="screen" href="main.css"/-->
+        <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     </head>
     <body>
         <div class="container">
-            <div class="row">
-                <div class="offset-sm-3 col-sm-6">
-
+            <div class="row text-center">
+                <div class="offset-sm-3 col-sm-6 card quote">
+                   The quote will go in here
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-sm-12">
+                    <button class="btn btn-primary">New Quote</button>
                 </div>
             </div>
         </div>
