--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-sm-12">
-                    <button class="btn btn-primary">New Quote</button>
-                </div>
-            </div>
+                <blockquote class="col-sm-12 blockquote">
+                    <button id="get-quote" class="btn btn-primary">New Quote</button>
+                </blockquote>
         </div>
         <!--script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
