--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
         <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid absolute">
+          <div class="relative">
             <div class="row text-center">
-                <div class="offset-sm-3 col-sm-6 card" id="random-quote"></div>
+                <blockquote class="blockquote" id="random-quote"></blockquote>
             </div>
             <div class="row text-center">
-                <blockquote class="col-sm-12 blockquote">
+                <blockquote class="col-sm-12">
                     <button id="get-quote" class="btn btn-primary">New Quote</button>
                 </blockquote>
             </div>
+          </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
         <!--script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>   
