Added font-awesome CSS for twitter icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
         <!--Bootstrap CSS-->
         <link rel="stylesheet" href="C:/Users/ISEM/Documents/FreeCodeCamp_Projects/bootstrap-4.1.0-dist/css/bootstrap.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     </head>
     <body>
@@ -14,11 +15,13 @@
           <div class="relative">
             <div class="row text-center">
                 <blockquote class="blockquote" id="random-quote"></blockquote>
+                <a class="fab fa-twitter"></a>
             </div>
             <div class="row text-center">
                 <blockquote class="col-sm-12">
                     <button id="get-quote" class="btn btn-primary">New Quote</button>
                 </blockquote>
+                
             </div>
           </div>
         </div>
