Styling twitter icon

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
           <div class="relative">
             <div class="row text-center">
                 <blockquote class="blockquote" id="random-quote"></blockquote>
-                <a class="fab fa-twitter"></a>
+            </div>
+            <div class="row icon">
+                    <a class="fab fa-twitter"></a>
             </div>
             <div class="row text-center">
                 <blockquote class="col-sm-12">
                     <button id="get-quote" class="btn btn-primary">New Quote</button>
                 </blockquote>
-                
             </div>
           </div>
         </div>
