Creating tweet button

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="row text-center">
                 <blockquote class="blockquote" id="random-quote"></blockquote>
             </div>
-            <div class="row icon">
-                    <a class="fab fa-twitter"></a>
-            </div>
             <div class="row text-center">
-                <blockquote class="col-sm-12">
-                    <button id="get-quote" class="btn btn-primary">New Quote</button>
-                </blockquote>
+                <div class="col-sm-6">
+                    <button id="get-quote" class="btn btn-primary quote-btn">New Quote</button>
+                </div>
+                <div class="col-sm-6">
+                    <button id="get-tweet" class="btn btn-primary tweet">Tweet<i class="fab fa-twitter"></i></button>
+                </div>
             </div>
           </div>
         </div>
