--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <button id="get-quote" class="btn btn-primary quote-btn">New Quote</button>
                 </div>
                 <div class="col-sm-6">
-                    <button id="get-tweet" class="btn btn-primary tweet">Tweet<i class="fab fa-twitter"></i></button>
+                    <button id="get-tweet" class="btn btn-primary tweet-btn">Tweet<i class="fab fa-twitter"></i></button>
                 </div>
             </div>
           </div>
