--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Random Quote Machine</title>
         <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
         <!--Bootstrap CSS-->
-        <link rel="stylesheet" href="C:/Users/ISEM/Documents/FreeCodeCamp_Projects/bootstrap-4.1.0-dist/css/bootstrap.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     </head>
@@ -21,14 +21,14 @@
                     <button id="get-quote" class="btn btn-primary quote-btn">New Quote</button>
                 </div>
                 <div class="col-sm-6">
-                    <button id="get-tweet" class="btn btn-primary tweet-btn">Tweet<i class="fab fa-twitter"></i></button>
+                    <button type="submit" id="send-tweet" class="btn btn-primary tweet-btn">Tweet<i class="fab fa-twitter"></i></button>
                 </div>
             </div>
           </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-        <!--script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>   
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script!-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>   
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html>
