--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
     </head>
     <body>
-        <div class="container-fluid absolute">
-          <div class="relative">
+        <div class="container-fluid relative">
+          <div class="absolute">
             <div class="row text-center">
                 <blockquote class="blockquote" id="random-quote"></blockquote>
             </div>
